# no-bazel

./: .gitignore  BUILD.bazel  DEPS.json  WORKSPACE  icu.BUILD.bazel  libuv.BUILD.bazel  main.cc  v8.BUILD.bazel
tools/update-deps/: package-lock.json  package.json
tools/update-deps/src/: cli.ts
